Project

General

Profile

Actions

Bug #41938

closed

Error cloning snapshot when using RBD namespaces

Added by Ricardo Marques over 4 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

I have the following snapshot under the namespace `ns1`:

ceph-dev:/ceph/build # bin/rbd info rbd/ns1/img1@img1_2019-09-19T21:32:47.161+01:00
2019-09-19T20:43:45.392+0000 7ff01bcacec0 -1 WARNING: all dangerous and experimental features are enabled.
2019-09-19T20:43:45.392+0000 7ff01bcacec0 -1 WARNING: all dangerous and experimental features are enabled.
2019-09-19T20:43:45.396+0000 7ff01bcacec0 -1 WARNING: all dangerous and experimental features are enabled.
rbd image 'img1':
    size 1 GiB in 256 objects
    order 22 (4 MiB objects)
    snapshot_count: 1
    id: 131a7b69432d
    block_name_prefix: rbd_data.131a7b69432d
    format: 2
    features: layering, exclusive-lock, object-map, fast-diff, deep-flatten
    op_features: 
    flags: 
    create_timestamp: Thu Sep 19 20:32:06 2019
    access_timestamp: Thu Sep 19 20:32:06 2019
    modify_timestamp: Thu Sep 19 20:32:06 2019
    protected: True

When I try to clone it, I get the following error:

ceph-dev:/ceph/build # bin/rbd clone rbd/ns1/img1@img1_2019-09-19T21:32:47.161+01:00 rbd/ns1/img2
2019-09-19T20:34:41.272+0000 7fb9d35dcec0 -1 WARNING: all dangerous and experimental features are enabled.
2019-09-19T20:34:41.272+0000 7fb9d35dcec0 -1 WARNING: all dangerous and experimental features are enabled.
2019-09-19T20:34:41.276+0000 7fb9d35dcec0 -1 WARNING: all dangerous and experimental features are enabled.
rbd: /ceph/src/cls/rbd/cls_rbd_client.cc:489: void librbd::cls_client::add_child(librados::v14_2_0::ObjectWriteOperation*, const cls::rbd::ParentImageSpec&, const string&): Assertion `pspec.pool_namespace.empty()' failed.
*** Caught signal (Aborted) **

<SEE FILE ATTACHED TO THIS ISSUE> 

Aborted (core dumped)

Files

rbd_clone_error.txt (82 KB) rbd_clone_error.txt Ricardo Marques, 09/19/2019 08:53 PM

Related issues 2 (0 open2 closed)

Blocks Dashboard - Subtask #25125: mgr/dashboard: support RBD namespacesResolvedRicardo Marques

Actions
Copied to rbd - Backport #42204: nautilus: Error cloning snapshot when using RBD namespacesResolvedJason DillamanActions
Actions #1

Updated by Ricardo Marques over 4 years ago

Actions #2

Updated by Jason Dillaman over 4 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #3

Updated by Jason Dillaman over 4 years ago

  • Backport set to nautilus
Actions #4

Updated by Jason Dillaman over 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 30711
Actions #5

Updated by Mykola Golub over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #42204: nautilus: Error cloning snapshot when using RBD namespaces added
Actions #7

Updated by Jason Dillaman over 4 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF