librbd: v1 clones are restricted to the same namespace

Therefore the v1 parent spec should not attempt to populate the
namespace.

Fixes: https://tracker.ceph.com/issues/41938
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 547ebccaf9cbc27aeee68877cd46da7d132c078f)